- added pinning (always on top) - added pinning note to note - fixed moving - added NotezDialog - fixed link bug
_____________
- removed dialogs jar
- added icons
- added some comments

--- a/Notez/src/include/fxml/NotezGui.fxml
+++ b/Notez/src/include/fxml/NotezGui.fxml
@@ -6,58 +6,73 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import de.gui.*?>
+<?import javafx.scene.control.ToggleButton?>
 
 <BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <bottom>
-      <HBox fx:id="hBoxButtom" alignment="TOP_RIGHT" styleClass="background" stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
-         <children>
-            <Hyperlink fx:id="fileLink" text="Hyperlink" />
-            <ImageView fx:id="resize" fitHeight="25.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true" />
-         </children>
-      </HBox>
-   </bottom>
-   <top>
-      <ToolBar fx:id="toolBar" nodeOrientation="RIGHT_TO_LEFT" styleClass="background-darker" stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
-        <items>
-            <Button fx:id="btnClose" mnemonicParsing="false" onAction="#closeNote" styleClass="background" stylesheets="@Stylesheets.css" text="" />
-            <Button fx:id="btnSettings" mnemonicParsing="false" onAction="#openSettings" styleClass="background" stylesheets="@Stylesheets.css" text="" />
-          <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#addNewNote" styleClass="background" stylesheets="@Stylesheets.css" text="" />
-        </items>
-      </ToolBar>
-   </top>
-   <center>
-      <StackPane fx:id="stack" BorderPane.alignment="CENTER">
-         <children>
-            <ScrollPane fx:id="scrollTxt" fitToHeight="true" fitToWidth="true" prefViewportHeight="360.0" prefViewportWidth="600.0" styleClass="background" stylesheets="@Stylesheets.css">
-               <content>
-                  <TextArea fx:id="txtNote" styleClass="background" stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER" />
-               </content>
-            </ScrollPane>
-            <BorderPane fx:id="borderPaneSettings">
-               <center>
-                  <TabPane fx:id="tabSettings" styleClass="background" stylesheets="@Stylesheets.css" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
-                    <tabs>
-                      <Tab fx:id="tabLocal" text="Lokal">
-                           <content>
-                              <VBox fx:id="vBoxLocalSet" prefHeight="200.0" prefWidth="100.0">
-                                 <children>
-                                 </children>
-                              </VBox>
-                           </content></Tab>
-                      <Tab fx:id="tabRemote" text="Remote" />
-                    </tabs>
-                  </TabPane>
-               </center>
-               <bottom>
-                  <HBox alignment="TOP_RIGHT" styleClass="background" stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
-                     <children>
-                        <Button fx:id="btnSaveSettings" mnemonicParsing="false" onAction="#saveSettings" styleClass="background" stylesheets="@Stylesheets.css" text="Speichern" />
-                        <Button fx:id="btnCancelSettings" mnemonicParsing="false" onAction="#cancelSettings" styleClass="background" stylesheets="@Stylesheets.css" text="Abbrechen" />
-                     </children>
-                  </HBox>
-               </bottom>
-            </BorderPane>
-         </children>
-      </StackPane>
-   </center>
+	<bottom>
+		<HBox fx:id="hBoxButtom" alignment="TOP_RIGHT" styleClass="background"
+			stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
+			<children>
+				<Hyperlink fx:id="fileLink" text="" />
+				<ImageView fx:id="resize" 
+					pickOnBounds="true" preserveRatio="true" />
+			</children>
+		</HBox>
+	</bottom>
+	<top>
+		<ToolBar fx:id="toolBar" nodeOrientation="RIGHT_TO_LEFT"
+			styleClass="background-darker" stylesheets="@Stylesheets.css"
+			BorderPane.alignment="CENTER">
+			<items>
+				<Button fx:id="btnClose" mnemonicParsing="false" onAction="#closeNote"
+					styleClass="background-darker" stylesheets="@Stylesheets.css" text="" />
+				<Button fx:id="btnSettings" mnemonicParsing="false" onAction="#openSettings"
+					styleClass="background-darker" stylesheets="@Stylesheets.css" text="" />
+				<Button fx:id="btnAdd" mnemonicParsing="false" onAction="#addNewNote"
+					styleClass="background-darker" stylesheets="@Stylesheets.css" text="" />
+				<ToggleButton fx:id="btnPin" mnemonicParsing="false"
+					onAction="#pinNote" styleClass="background-darker" stylesheets="@Stylesheets.css"
+					text="" />
+				<ImageView fx:id="pickNote" 
+					pickOnBounds="true" preserveRatio="true" />
+			</items>
+		</ToolBar>
+	</top>
+	<center>
+		<StackPane fx:id="stack" BorderPane.alignment="CENTER">
+			<children>
+				<TextArea fx:id="txtNote" styleClass="background"
+					stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER" />
+				<BorderPane fx:id="borderPaneSettings">
+					<center>
+						<TabPane fx:id="tabSettings" styleClass="background"
+							stylesheets="@Stylesheets.css" tabClosingPolicy="UNAVAILABLE"
+							BorderPane.alignment="CENTER">
+							<tabs>
+								<Tab fx:id="tabLocal" text="Lokal">
+									<content>
+										<VBox fx:id="vBoxLocalSet" />
+									</content>
+								</Tab>
+								<Tab fx:id="tabRemote" text="Remote" />
+							</tabs>
+						</TabPane>
+					</center>
+					<bottom>
+						<HBox alignment="TOP_RIGHT" styleClass="background"
+							stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
+							<children>
+								<Button fx:id="btnSaveSettings" mnemonicParsing="false"
+									onAction="#saveSettings" styleClass="background" stylesheets="@Stylesheets.css"
+									text="Speichern" />
+								<Button fx:id="btnCancelSettings" mnemonicParsing="false"
+									onAction="#cancelSettings" styleClass="background" stylesheets="@Stylesheets.css"
+									text="Abbrechen" />
+							</children>
+						</HBox>
+					</bottom>
+				</BorderPane>
+			</children>
+		</StackPane>
+	</center>
 </BorderPane>
