--- a/Notez/src/include/fxml/NotezDialog.fxml
+++ b/Notez/src/include/fxml/NotezDialog.fxml
@@ -5,33 +5,24 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity"
-	minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0"
-	styleClass="background" stylesheets="@Stylesheets.css"
-	prefWidth="319.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="100.0" prefWidth="319.0" styleClass="background" stylesheets="@Stylesheets.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 	<top>
-		<ToolBar fx:id="toolBar" nodeOrientation="RIGHT_TO_LEFT"
-			styleClass="background-darker" stylesheets="@Stylesheets.css"
-			BorderPane.alignment="CENTER">
+		<ToolBar fx:id="toolBar" nodeOrientation="RIGHT_TO_LEFT" styleClass="background-darker" stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
 			<items>
-				<Button fx:id="btnClose" mnemonicParsing="false" onAction="#close"
-					styleClass="background-darker" stylesheets="@Stylesheets.css" text="" />
+				<Button fx:id="btnClose" mnemonicParsing="false" onAction="#close" styleClass="background-darker" stylesheets="@Stylesheets.css" text="" />
 				<Label fx:id="lblTitle" styleClass="background-darker" stylesheets="@Stylesheets.css" text="" />
 			</items>
 		</ToolBar>
 	</top>
 	<center>
-		<Label text="Label" fx:id="lblMsg" BorderPane.alignment="CENTER" styleClass="background"
-			stylesheets="@Stylesheets.css" />
+		<Label fx:id="lblMsg" styleClass="background" stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER" />
 	</center>
 	<bottom>
-		<HBox fx:id="hBoxButtons" alignment="TOP_RIGHT" BorderPane.alignment="CENTER" styleClass="background"
-							stylesheets="@Stylesheets.css">
+		<HBox fx:id="hBoxButtons" alignment="TOP_RIGHT" styleClass="background" stylesheets="@Stylesheets.css" BorderPane.alignment="CENTER">
 			<children>
-				<Button fx:id="btnYes" mnemonicParsing="false" text="Yes" onAction="#yes" styleClass="background" stylesheets="@Stylesheets.css"/>
-				<Button fx:id="btnNo" mnemonicParsing="false" text="No" onAction="#no" styleClass="background" stylesheets="@Stylesheets.css"/>
-				<Button fx:id="btnCancel" mnemonicParsing="false" text="Cancel" onAction="#cancel" styleClass="background" stylesheets="@Stylesheets.css"/>
+				<Button fx:id="btnYes" mnemonicParsing="false" onAction="#yes" styleClass="background" stylesheets="@Stylesheets.css" text="Yes" />
+				<Button fx:id="btnNo" mnemonicParsing="false" onAction="#no" styleClass="background" stylesheets="@Stylesheets.css" text="No" />
+				<Button fx:id="btnCancel" mnemonicParsing="false" onAction="#cancel" styleClass="background" stylesheets="@Stylesheets.css" text="Cancel" />
 			</children>
 		</HBox>
 	</bottom>
