--- a/Notez/src/include/fxml/Stylesheets.css
+++ b/Notez/src/include/fxml/Stylesheets.css
@@ -61,3 +61,33 @@
     -fx-alignment: CENTER;
     -fx-text-fill: black;
 }
+
+.button:hover 
+{
+    -fx-background-color:
+        linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),
+        #9d4024,
+        #d86e3a,
+        radial-gradient(center 50% 50%, radius 100%, 
+        rgba(0,0,0,0.05), rgba(0,0,0,0.05));
+}
+
+.toggle-button:hover 
+{
+    -fx-background-color:
+        linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),
+        #9d4024,
+        #d86e3a,
+        radial-gradient(center 50% 50%, radius 100%, 
+        rgba(0,0,0,0.05), rgba(0,0,0,0.05));
+}
+
+.toggle-button:selected 
+{
+    -fx-background-color:
+        linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),
+        #9d4024,
+        #d86e3a,
+        radial-gradient(center 50% 50%, radius 100%, 
+        rgba(0,0,0,0.05), rgba(0,0,0,0.05));
+}
