--- a/Notez/src/include/fxml/NotezDialog.fxml
+++ b/Notez/src/include/fxml/NotezDialog.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity"
+<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity"
 	prefHeight="100.0" prefWidth="319.0" styleClass="background"
 	stylesheets="@Stylesheets.css" xmlns="http://javafx.com/javafx/8"
 	xmlns:fx="http://javafx.com/fxml/1">
